fix: spacing between entries

--- a/css/main.scss
+++ b/css/main.scss
@@ -309,6 +309,36 @@ div#gridid h3 {
   padding-left: 30px;
 }
 
+.member-experience {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.member-experience > .bigspacer {
+  display: none;
+}
+
+.member-experience .twocols {
+  align-items: center;
+  gap: 24px;
+  margin: 0;
+  min-height: 108px;
+}
+
+.member-experience .twocols > div:last-child {
+  min-height: 72px;
+}
+
+.member-experience .twocols img {
+  height: auto;
+  margin: 0 !important;
+  max-height: 64px;
+  max-width: 150px;
+  object-fit: contain;
+  width: auto;
+}
+
 .hugespacer {
   height: 50px;
 }
